--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "gray-matter": "^4.0.3",
+    "jquery": "^3.7.1",
     "next": "14.0.3",
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
