--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "aos": "^2.3.4",
     "gray-matter": "^4.0.3",
     "jquery": "^3.7.1",
